Revised Rule List UI, added formal Logging.